# curobo_robot_setup

./: BUGS_REPORT.md  CMakeLists.txt  COLLISION_CONFIG_FEATURE.md  FIXES_SUMMARY.md  LICENSE  QUICKSTART.md  README.md  SPHERE_SELECTION_BUG_FIX.md  TUTORIAL.md  package.xml  plugin.xml
example/: README.md  m1013.urdf  m1013.yml  ur5e.urdf
include/curobo_robot_setup/: collision_config_dialog.hpp  curobo_config.hpp  curobo_robot_setup_panel.hpp  joint_config_dialog.hpp  sphere_manager.hpp
launch/: robot_setup.launch.py
rviz/: robot_setup.rviz
src/: collision_config_dialog.cpp  curobo_config.cpp  curobo_robot_setup_panel.cpp  joint_config_dialog.cpp  sphere_fit_service.py  sphere_manager.cpp  urdf_extractor_node.cpp
srv/: GenerateSpheres.srv
ui/: curobo_robot_setup.ui
